bynkc/tests/fixtures/negative/20_question_on_non_result/input.bynk
commons test {
  fn f(n: Int) -> Result[Int, String] {
    let x = n?
    Ok(x)
  }
}
